Wedding - Added more photos

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,9 +10,9 @@ html
 
 		title H + J | #{title}
 		
-		link(type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300")
-		link(type="text/css" rel="stylesheet" href="//fonts.googleapis.com/css?family=Josefin+Sans:400,100,300,400i,600,700,700i|Lato:400,100,300,400i,700,700i,900")
-		link(type="text/css" rel="stylesheet" href="/stylesheets/styles.css")
+		link(type='text/css' rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300')
+		link(type='text/css' rel='stylesheet' href='//fonts.googleapis.com/css?family=Josefin+Sans:400,100,300,400i,600,700,700i|Lato:400,100,300,400i,700,700i,900')
+		link(type='text/css' rel='stylesheet' href='/stylesheets/styles.css')
 		block styles
 		
 		script(type="text/javascript" src="/scripts/Libs/angular.js")
