Wedding Social - Minor changes

--- a/views/wedding-social.jade
+++ b/views/wedding-social.jade
@@ -123,7 +123,7 @@ block content
 				li 
 					img(src='/images/prizes/his-hers-package.jpg')
 					span.prize His and Hers Package
-					span.donated-by Harvey and Sheri Gutierrez
+					span.donated-by 
 				li 
 					img(src='/images/prizes/jets-package.jpg')
 					span.prize Jets Package
