--- a/views/wedding.jade
+++ b/views/wedding.jade
@@ -3,17 +3,14 @@ extends layout
 block styles
 	link(type='text/css' rel='stylesheet' href='/stylesheets/wedding.css')
 	link(type='text/css' rel='stylesheet' href='/stylesheets/polaroids.css')
+	link(type='text/css' rel='stylesheet' href='/stylesheets/timeline.css')
+	link(type='text/css' rel='stylesheet' href='/stylesheets/headshot.css')	
 
 block content
 	div.row
 		div.col-sm-10.col-sm-offset-1
 			div.center
 				h1 <span>B</span>ride and <span>G</span>room
-				//- div.row.brideAndGroom
-				//- 	div.col-md-12
-				//- 		ul.headshot
-				//- 			li <img src="/images/entourage/Joanne.jpg" /><span>Joanne</span>
-				//- 			li <img src="/images/entourage/Herald.jpg" /><span>Herald</span>
 				ul.polaroids
 					li <img src="/images/entourage/Joanne.jpg" /><span>Joanne</span>
 					li <img src="/images/entourage/Herald.jpg" /><span>Herald</span>
@@ -112,7 +109,7 @@ block content
 						h3 <span>B</span>est <span>M</span>en
 						ul.headshot
 							li <img src="/images/entourage/Harvey.jpg" /><span>Harvey</span>
-							li <img src="/images/entourage/male-blank.jpg" /><span>Herschel</span>
+							li <img src="/images/entourage/Herschel.jpg" /><span>Herschel</span>
 							
 				div.row
 					div.col-md-12
@@ -135,23 +132,23 @@ block content
 							li <img src="/images/entourage/Archie.jpg" /><span>Archie</span>
 							li <img src="/images/entourage/Benn.jpg" /><span>Bennet</span>
 							li <img src="/images/entourage/Christian.jpg" /><span>Christian</span>
-							li <img src="/images/entourage/male-blank.jpg" /><span>Jekko</span>
+							li <img src="/images/entourage/Jekko.jpg" /><span>Jekko</span>
 							li <img src="/images/entourage/Mark.jpg" /><span>Mark</span>
-							li <img src="/images/entourage/male-blank.jpg" /><span>Marlon</span>
+							li <img src="/images/entourage/Marlon.jpg" /><span>Marlon</span>
 							li <img src="/images/entourage/Raymond.jpg" /><span>Raymond</span>
 
 				div.row
 					div.col-md-6
 						h3 <span>J</span>unior <span>B</span>ridesmaids
 						ul.headshot
-							li <img src="/images/entourage/female-blank.jpg" /><span>Gayle</span>
-							li <img src="/images/entourage/female-blank.jpg" /><span>Jezel</span>
+							li <img src="/images/entourage/Gayle.jpg" /><span>Gayle</span>
+							li <img src="/images/entourage/Jezel.jpg" /><span>Jezel</span>
 							li <img src="/images/entourage/Rhegie.jpg" /><span>Rhegie</span>
 					div.col-md-6
 						h3 <span>J</span>unior <span>G</span>roomsmen
 						ul.headshot
-							li <img src="/images/entourage/male-blank.jpg" /><span>John Raven</span>
-							li <img src="/images/entourage/male-blank.jpg" /><span>Jon</span>
+							li <img src="/images/entourage/John-Raven.jpg" /><span>John Raven</span>
+							li <img src="/images/entourage/Jon.jpg" /><span>Jon</span>
 							li <img src="/images/entourage/Zeeron.jpg" /><span>Zeeron</span>
 
 
@@ -193,7 +190,3 @@ block content
 				//- 		ul
 				//- 			li Leo Carter Gutierrez
 
-
-				br
-				br
-				br
