--- a/views/wedding-social.jade
+++ b/views/wedding-social.jade
@@ -117,7 +117,7 @@ block content
 				li 
 					img(src='/images/prizes/nintendo-switch.jpg')
 					span.prize Nintendo Switch
-					span.donated-by Axalan Family
+					span.donated-by Jessica, Jezel, Marlon, and Monica Axalan
 
 	div.row
 		div.col-sm-12
@@ -155,6 +155,14 @@ block content
 					img(src='/images/prizes/kitchen-aid.jpg')
 					span.prize Kitchen Aid Mixer
 					span.donated-by Katrina Galapon, Alvin Albay, and Sherlyn & Jeremy Watson
+				li 
+					img(src='/images/prizes/bedroom-package.jpg')
+					span.prize Bedroom Package
+					span.donated-by Romawac Family
+				li 
+					img(src='/images/prizes/retropie.jpg')
+					span.prize Retropie Package
+					span.donated-by Irene DelMonte
 
 			h2.subheading.center Possible Prizes
 			ul.polaroids.polaroids-grid
