Social - Updated prize list

--- a/views/wedding-social.jade
+++ b/views/wedding-social.jade
@@ -163,6 +163,10 @@ block content
 					img(src='/images/prizes/retropie.jpg')
 					span.prize Retropie Package
 					span.donated-by Irene DelMonte
+				li 
+					img(src='/images/prizes/lottery-tree.jpg')
+					span.prize Lottery Tree
+					span.donated-by Thoto and Jovy Maranan
 
 			h2.subheading.center Possible Prizes
 			ul.polaroids.polaroids-grid
@@ -173,10 +177,6 @@ block content
 				li 
 					img(src='/images/prizes/beauty-package.jpg')
 					span.prize Beauty Package
-					span.donated-by 
-				li 
-					img(src='/images/prizes/lottery-tree.jpg')
-					span.prize Lottery Tree
 					span.donated-by 
 				li 
 					img(src='/images/prizes/date-night-package.jpg')
