--- a/views/wedding-social.jade
+++ b/views/wedding-social.jade
@@ -104,8 +104,8 @@ block content
 					span.donated-by Archie & Mary Ballesteros, Honesto & Lita Rutaquio, and Lea Larion
 				li 
 					img(src='/images/prizes/tv.jpg')
-					span.prize TV
-					span.donated-by
+					span.prize 50" Sharp Smart TV + Reciever
+					span.donated-by Mandhing & Tita Gutierrez, and Honesto & Lita Rutaquio
 				li 
 					img(src='/images/prizes/gopro-hero-5.jpg')
 					span.prize GoPro Hero 5 
@@ -139,10 +139,10 @@ block content
 					img(src='/images/prizes/alcohol-package.jpg')
 					span.prize Alcohol Package
 					span.donated-by Joyce Axalan and Raymond Dabu	
-				li 
-					img(src='/images/prizes/basketball-package.jpg')
-					span.prize Basketball Package
-					span.donated-by Mark Capucion, Christian Lozano, Shannon Maranan, John Raven Andrin
+				//- li 
+				//- 	img(src='/images/prizes/basketball-package.jpg')
+				//- 	span.prize Basketball Package
+				//- 	span.donated-by Mark Capucion, Christian Lozano, Shannon Maranan, John Raven Andrin
 				li 
 					img(src='/images/prizes/camping-package.jpg')
 					span.prize Camping Package
@@ -167,6 +167,19 @@ block content
 					img(src='/images/prizes/lottery-tree.jpg')
 					span.prize Lottery Tree
 					span.donated-by Thoto and Jovy Maranan
+	div.row
+		div.col-sm-12
+			h2.center <span>B</span>askball <span>P</span>rizes	(Wins both) <br>
+				<sub><i><u>Most baskets in 60 seconds!</u></i></sub>
+			ul.polaroids.polaroids-grid
+				li 
+					img(src='/images/prizes/basketball-package.jpg')
+					span.prize Basketball Hoop + Ball
+					span.donated-by Mark Capucion, Christian Lozano, Shannon Maranan, John Raven Andrin
+				li 
+					img(src='/images/prizes/jordans.jpg')
+					span.prize Jordan 5 Cement - Size 10
+					span.donated-by Mark Capucion, Christian Lozano, Shannon Maranan, John Raven Andrin
 
 			h2.subheading.center Possible Prizes
 			ul.polaroids.polaroids-grid
