--- a/views/wedding-social.jade
+++ b/views/wedding-social.jade
@@ -169,7 +169,7 @@ block content
 					span.donated-by Thoto and Jovy Maranan
 	div.row
 		div.col-sm-12
-			h2.center <span>B</span>askball <span>P</span>rizes	(Wins both) <br>
+			h2.center <span>B</span>asketball <span>P</span>rizes	(Wins both) <br>
 				<sub><i><u>Most baskets in 60 seconds!</u></i></sub>
 			ul.polaroids.polaroids-grid
 				li 
