Social - Updated prizes

--- a/views/wedding-social.jade
+++ b/views/wedding-social.jade
@@ -100,11 +100,11 @@ block content
 			ul.polaroids.polaroids-grid
 				li 
 					img(src='/images/prizes/travel-voucher.jpg')
-					span.prize $1000 Travel Voucher
+					span.prize $1000 Voucher + Luggage
 					span.donated-by Archie & Mary Ballesteros, Honesto & Lita Rutaquio, and Lea Larion
 				li 
 					img(src='/images/prizes/tv.jpg')
-					span.prize 50" Sharp Smart TV + Reciever
+					span.prize 50" Smart TV + Reciever
 					span.donated-by Mandhing & Tita Gutierrez, and Honesto & Lita Rutaquio
 				li 
 					img(src='/images/prizes/gopro-hero-5.jpg')
@@ -113,11 +113,15 @@ block content
 				li 
 					img(src='/images/prizes/apple-package.jpg')
 					span.prize Apple Package 
-					span.donated-by Harvey and Sheri Gutierrez
+					span.donated-by Harvey & Sheri Gutierrez
 				li 
 					img(src='/images/prizes/nintendo-switch.jpg')
 					span.prize Nintendo Switch
 					span.donated-by Jessica, Jezel, Marlon, and Monica Axalan
+				li 
+					img(src='/images/prizes/ilash-boutique.jpg')
+					span.prize $400 iLash Boutique 
+					span.donated-by Mary Ballesteros
 
 	div.row
 		div.col-sm-12
@@ -126,27 +130,23 @@ block content
 				li 
 					img(src='/images/prizes/kylie-jenner-package.jpg')
 					span.prize Kylie Jenner Cosmetics
-					span.donated-by Herald and Joanne
-				li 
-					img(src='/images/prizes/ilash-boutique.jpg')
-					span.prize $400 iLash Boutique 
-					span.donated-by Mary Ballesteros
+					span.donated-by Herald & Joanne
 				li 
 					img(src='/images/prizes/bbq-grill.jpg')
 					span.prize BBQ Grill Package
-					span.donated-by Ronald and Cecille Maranan
+					span.donated-by Arthur & Marilou Gutierrez
 				li 
 					img(src='/images/prizes/alcohol-package.jpg')
 					span.prize Alcohol Package
-					span.donated-by Joyce Axalan and Raymond Dabu	
+					span.donated-by Joyce Axalan & Raymond Dabu	
 				//- li 
 				//- 	img(src='/images/prizes/basketball-package.jpg')
 				//- 	span.prize Basketball Package
 				//- 	span.donated-by Mark Capucion, Christian Lozano, Shannon Maranan, John Raven Andrin
-				li 
-					img(src='/images/prizes/camping-package.jpg')
-					span.prize Camping Package
-					span.donated-by Harvey and Sheri Gutierrez
+				//- li 
+				//- 	img(src='/images/prizes/camping-package.jpg')
+				//- 	span.prize Camping Package
+				//- 	span.donated-by Harvey and Sheri Gutierrez
 				li 
 					img(src='/images/prizes/fitness-package.jpg')
 					span.prize Fitness Package
@@ -166,7 +166,27 @@ block content
 				li 
 					img(src='/images/prizes/lottery-tree.jpg')
 					span.prize Lottery Tree
-					span.donated-by Thoto and Jovy Maranan
+					span.donated-by Thoto & Jovy Maranan
+				li 
+					img(src='/images/prizes/bike.jpg')
+					span.prize His + Her Mountain Bikes
+					span.donated-by Richard & Grace Axalan, and Jekko & Dikei Axalan
+				li 
+					img(src='/images/prizes/mini-fridge.jpg')
+					span.prize Mini-Fridge with Beer
+					span.donated-by Tony & Recili Axalan, and Rosie & Sammy Ilag
+				li 
+					img(src='/images/prizes/vacuum.jpg')
+					span.prize Vacuum
+					span.donated-by Paul & Bernadeth Ilag
+				li 
+					img(src='/images/prizes/tools.jpg')
+					span.prize MasterCraft Tools
+					span.donated-by Mandhing Gutierrez and Patrick & Peachie Ilag
+				li 
+					img(src='/images/prizes/bags.jpg')
+					span.prize Designer Bags
+					span.donated-by Harvey & Sheri Gutierrez
 	div.row
 		div.col-sm-12
 			h2.center <span>B</span>asketball <span>P</span>rizes	(Wins both) <br>
@@ -206,14 +226,6 @@ block content
 				li 
 					img(src='/images/prizes/car-package.jpg')
 					span.prize Car Package 
-					span.donated-by 
-				li 
-					img(src='/images/prizes/mini-fridge.jpg')
-					span.prize Mini-Fridge with Beer
-					span.donated-by 
-				li 
-					img(src='/images/prizes/bike.jpg')
-					span.prize Mountain Bike
 					span.donated-by 
 				li 
 					img(src='/images/prizes/lawn-mower.jpg')
